samle/service-nlb-ip2-nginx1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
